// Collectiverse ERD for dbdiagram.io
// Defines the database structure for an e-commerce platform for collectibles
// Includes tables for users, products, product images, carts, cart items, orders, and order items

Table users {
  id serial [primary key]
  username varchar [not null, unique]
  email varchar [not null, unique]
  password_hash varchar [not null]
  first_name varchar
  last_name varchar
  profile_image_url varchar
  bio text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table products {
  id serial [primary key]
  seller_id integer [ref: > users.id]
  title varchar [not null]
  description text [not null]
  price decimal(10,2) [not null]
  category varchar [not null]
  condition varchar [not null]
  brand varchar
  model varchar
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table product_images {
  id serial [primary key]
  product_id integer [ref: > products.id]
  image_url varchar [not null]
  is_primary boolean [default: false]
  created_at timestamp [default: `now()`]
}

Table carts {
  id serial [primary key]
  user_id integer [ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table cart_items {
  id serial [primary key]
  cart_id integer [ref: > carts.id]
  product_id integer [ref: > products.id]
  quantity integer [not null, default: 1]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table orders {
  id serial [primary key]
  user_id integer [ref: > users.id]
  total_amount decimal(10,2) [not null]
  shipping_address text [not null]
  billing_address text [not null]
  status varchar [not null, default: 'pending']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table order_items {
  id serial [primary key]
  order_id integer [ref: > orders.id]
  product_id integer [ref: > products.id]
  product_title varchar [not null]
  price_at_purchase decimal(10,2) [not null]
  quantity integer [not null]
  created_at timestamp [default: `now()`]
} 